--- a/index.html
+++ b/index.html
@@ -367,10 +367,12 @@
 
         <!-- DOWNLOAD BUTTONS -->
         <section class="downloads">
-            <a href="#" class="store-btn" aria-label="Get it on Google Play">
+            <a href="https://play.google.com/store/apps/details?id=com.DCT.ZEP" class="store-btn"
+                aria-label="Get it on Google Play">
                 <img src="assets/google-play-badge.png" alt="Get it on Google Play" />
             </a>
-            <a href="#" class="store-btn" aria-label="Get it on the App Store">
+            <a href="https://apps.apple.com/us/app/zoo-escape-tile-match-pet-game/id6755091754" class="store-btn"
+                aria-label="Get it on the App Store">
                 <img src="assets/app-store-badge.png" alt="Get it on the App Store" />
             </a>
         </section>
