--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
         content="Zoo Escape Pawzzle Zoo Escape Tile Match Pet Game is a cute and relaxing puzzle game where you match three tiles to clear the board, earn Paw Keys, and rescue dozens of adorable animals from their cages!" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/favicon.png" />
+    <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="manifest" href="site.webmanifest" />
 
     <!-- Google Font (similar to in-game style) -->
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;600;700&display=swap"
