--- a/terms.html
+++ b/terms.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="manifest" href="site.webmanifest" />
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;600&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
 
     <style>
         *,
@@ -138,10 +138,13 @@
 
         <article class="card">
             <h1>Terms of Use</h1>
-            <p>These Terms and Conditions govern your use of the mobile game "Zoo Escape Tile Match Pet Game" (the
+            <p>
+                These Terms and Conditions govern your use of the mobile game "Zoo Escape Tile Match Pet Game" (the
                 "App"),
                 developed by Dmytro Yermolaiev (the "Developer"). By downloading or using the App, you agree to these
-                terms. Please read them carefully.</p>
+                terms.
+                Please read them carefully.
+            </p>
 
             <h2>Use of the App</h2>
             <p>You may not:</p>
@@ -151,27 +154,50 @@
                 <li>Create derivative works based on the App</li>
                 <li>Use any part of the App’s content, assets, trademarks, or code without permission</li>
             </ul>
-            <p>All graphics, characters, code, animations, and other intellectual property are owned by the Developer
-                unless otherwise stated.</p>
-            <p>The App is intended for entertainment purposes only. The Developer may update, modify, or discontinue
-                the App at any time without prior notice. New features or premium content may be introduced in the
-                future.</p>
+            <p>
+                All graphics, characters, code, animations, and other intellectual property are owned by the Developer
+                unless otherwise stated.
+            </p>
+            <p>
+                The App is intended for entertainment purposes only. The Developer may update, modify, or discontinue
+                the App at any time without prior notice.
+                New features or premium content may be introduced in the future.
+            </p>
 
             <h2>Third-Party Services</h2>
             <p>The App uses third-party services to provide core functionality, advertising, and analytics. These
                 include:</p>
             <ul>
-                <li>Unity – game engine and platform (<a href="https://unity.com/legal/terms-of-service"
-                        target="_blank">Unity Terms</a>)</li>
-                <li>AdMob (Google) – advertising network (<a href="https://policies.google.com/terms"
-                        target="_blank">AdMob Terms</a>)</li>
-                <li>Mixpanel – anonymous in-app analytics (<a href="https://mixpanel.com/legal/terms-of-use/"
-                        target="_blank">Mixpanel Terms</a>)</li>
-                <li>Unity Gaming Services – cloud save, authentication, leaderboards (<a
-                        href="https://unity.com/legal/terms-of-service" target="_blank">UGS Terms</a>)</li>
+                <li>
+                    Unity – game engine and platform
+                    (<a href="https://unity.com/legal/terms-of-service" target="_blank" rel="noopener noreferrer">Unity
+                        Terms</a>)
+                </li>
+                <li>
+                    AdMob (Google) – advertising network
+                    (<a href="https://policies.google.com/terms" target="_blank" rel="noopener noreferrer">AdMob
+                        Terms</a>)
+                </li>
+                <li>
+                    Mixpanel – anonymous in-app analytics
+                    (<a href="https://mixpanel.com/legal/terms-of-use/" target="_blank"
+                        rel="noopener noreferrer">Mixpanel Terms</a>)
+                </li>
+                <li>
+                    Unity Gaming Services – cloud save, authentication, leaderboards
+                    (<a href="https://unity.com/legal/terms-of-service" target="_blank" rel="noopener noreferrer">UGS
+                        Terms</a>)
+                </li>
+                <li>
+                    Firebase (Google) – analytics/app measurement
+                    (<a href="https://firebase.google.com/support/privacy" target="_blank"
+                        rel="noopener noreferrer">Firebase Policy</a>)
+                </li>
             </ul>
-            <p>By using the App, you acknowledge that these third-party services operate under their own Terms &
-                Policies.</p>
+            <p>
+                By using the App, you acknowledge that these third-party services operate under their own Terms &amp;
+                Policies.
+            </p>
 
             <h2>Internet Connection</h2>
             <p>Some features of the App require an active internet connection, including but not limited to:</p>
@@ -185,23 +211,36 @@
 
             <h2>In-Game User ID</h2>
             <p>The App generates an anonymous User ID used for game functionality.</p>
-            <p>If you contact support, you may choose to provide this User ID to help the Developer investigate
-                technical issues. Supplying this ID is optional and does not contain personal data.</p>
+            <p>
+                If you contact support, you may choose to provide this User ID to help the Developer investigate
+                technical issues.
+                Supplying this ID is optional and does not contain personal data.
+            </p>
 
             <h2>In-App Purchases</h2>
-            <p>Certain features or items may be available as in-app purchases. All purchases are processed securely by
-                Google Play or the Apple App Store. The Developer does not have access to your payment information.</p>
+            <p>
+                Certain features or items may be available as in-app purchases. All purchases are processed securely by
+                Google Play or the Apple App Store.
+                The Developer does not have access to your payment information.
+            </p>
 
             <h2>App Updates and Termination</h2>
-            <p>The App may receive updates that enhance gameplay, fix issues, or change functionality. You agree to
-                accept these updates to continue using the App.</p>
-            <p>The Developer reserves the right to suspend or terminate access to the App at any time without prior
-                notice. Upon termination, all rights granted to you under these Terms will cease.</p>
+            <p>
+                The App may receive updates that enhance gameplay, fix issues, or change functionality. You agree to
+                accept these updates to continue using the App.
+            </p>
+            <p>
+                The Developer reserves the right to suspend or terminate access to the App at any time without prior
+                notice.
+                Upon termination, all rights granted to you under these Terms will cease.
+            </p>
 
             <h2>Changes to These Terms</h2>
-            <p>These Terms & Conditions may be updated from time to time. Continued use of the App after changes are
-                published constitutes acceptance of the new terms. The latest version will always be available on this
-                page.</p>
+            <p>
+                These Terms &amp; Conditions may be updated from time to time. Continued use of the App after changes
+                are published constitutes acceptance of the new terms.
+                The latest version will always be available on this page.
+            </p>
 
             <h2>Contact</h2>
             <p>If you have any questions or need support, please contact:</p>
