--- a/index.html
+++ b/index.html
@@ -337,9 +337,8 @@
             <div class="gallery-card--video">
                 <div class="video-embed" aria-label="Zoo Escape Pawzzle Trailer">
                     <iframe
-                        src="https://www.youtube.com/embed/embsye3q9oI?autoplay=1&mute=1&playsinline=1&loop=1&playlist=embsye3q9oI&controls=1&modestbranding=1&rel=0"
-                        title="Zoo Escape Pawzzle Trailer"
-                        allow="autoplay; encrypted-media; picture-in-picture; fullscreen" allowfullscreen
+                        src="https://www.youtube.com/embed/embsye3q9oI?autoplay=1&mute=1&playsinline=1&loop=1&playlist=embsye3q9oI&controls=0&modestbranding=1&rel=0"
+                        title="Zoo Escape Pawzzle Trailer" allow="autoplay; encrypted-media; picture-in-picture"
                         referrerpolicy="strict-origin-when-cross-origin">
                     </iframe>
                 </div>
