--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             }
 
             .gallery {
-                margin: -10px auto 20px;
+                margin: 0px auto 20px;
                 padding: 6px;
             }
 
@@ -337,8 +337,8 @@
             <div class="gallery-card--video">
                 <div class="video-embed" aria-label="Zoo Escape Pawzzle Trailer">
                     <iframe
-                        src="https://www.youtube.com/embed/embsye3q9oI?autoplay=1&mute=0&playsinline=1&loop=1&playlist=embsye3q9oI&controls=0&modestbranding=1&rel=0"
-                        title="Zoo Escape Pawzzle Trailer" allow="autoplay; encrypted-media; picture-in-picture"
+                        src="https://www.youtube.com/embed/embsye3q9oI?autoplay=0&mute=0&playsinline=1&controls=1&fs=0&iv_load_policy=3&modestbranding=1&rel=0"
+                        title="Zoo Escape Pawzzle Trailer" allow="encrypted-media; picture-in-picture"
                         referrerpolicy="strict-origin-when-cross-origin">
                     </iframe>
                 </div>
