--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
             <div class="gallery-card--video">
                 <div class="video-embed" aria-label="Zoo Escape Pawzzle Trailer">
                     <iframe
-                        src="https://www.youtube.com/embed/embsye3q9oI?autoplay=0&mute=0&playsinline=1&controls=1&fs=0&iv_load_policy=3&modestbranding=1&rel=0"
-                        title="Zoo Escape Pawzzle Trailer" allow="encrypted-media; picture-in-picture"
+                        src="https://www.youtube.com/embed/embsye3q9oI?autoplay=0&mute=0&playsinline=1&controls=0&fs=0&iv_load_policy=3&modestbranding=1&rel=0"
+                        title="Zoo Escape Pawzzle Trailer" allow="encrypted-media; picture-in-picture; fullscreen"
                         referrerpolicy="strict-origin-when-cross-origin">
                     </iframe>
                 </div>
