--- a/index.html
+++ b/index.html
@@ -105,16 +105,17 @@
         }
 
         .gallery-card--video {
-            width: min(82vw, 760px);
+            width: min(25vw, 240px);
             margin: 0 auto;
         }
 
         .video-embed {
             width: 100%;
-            aspect-ratio: 16 / 9;
-            border-radius: 24px;
+            aspect-ratio: 9 / 16;
+            border-radius: 16px;
+            margin: 0 auto;
             overflow: hidden;
-            box-shadow: 0 16px 34px rgba(0, 0, 0, 0.65);
+            box-shadow: 0 0px 34px rgba(0, 0, 0, 0.65);
             background: rgba(0, 0, 0, 0.18);
         }
 
@@ -243,7 +244,7 @@
             }
 
             .gallery-card--video {
-                width: min(92vw, 720px);
+                width: min(25vw, 240px);
             }
 
             .downloads {
@@ -280,7 +281,7 @@
             }
 
             .gallery-card--video {
-                width: min(94vw, 640px);
+                width: min(45vw, 340px);
             }
 
             .downloads {
