--- a/terms.html
+++ b/terms.html
@@ -193,6 +193,11 @@
                     (<a href="https://firebase.google.com/support/privacy" target="_blank"
                         rel="noopener noreferrer">Firebase Policy</a>)
                 </li>
+                <li>
+                    Meta (Facebook) – app events for analytics and ad measurement
+                    (<a href="https://www.facebook.com/privacy/policy/" target="_blank"
+                        rel="noopener noreferrer">Meta Privacy Policy</a>)
+                </li>
             </ul>
             <p>
                 By using the App, you acknowledge that these third-party services operate under their own Terms &amp;
